force-app/main/default/objects/Bulk_Order_CSV_Data__c/fields/Additional_Reimbursements_Pay_Types__c.field-meta.xml
<CustomField>
    <fullName>Additional_Reimbursements_Pay_Types__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Additional Reimbursements / Pay Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>