force-app/main/default/objects/Bulk_Order_CSV_Data__c/fields/Benefits_Deductions__c.field-meta.xml
<CustomField>
    <fullName>Benefits_Deductions__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Benefits/Deductions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>