force-app/main/default/objects/Bulk_Order_CSV_Data__c/fields/Entity_type__c.field-meta.xml
<CustomField>
    <fullName>Entity_type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Entity type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>