force-app/main/default/objects/Bulk_Order_CSV_Data__c/fields/First_Pay_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Pay_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>First Pay Date</label>
    <length>100</length>
    <type>Text</type>
</CustomField>