force-app/main/default/objects/Bulk_Order_CSV_Data__c/fields/Last_Processed__c.field-meta.xml
<CustomField>
    <fullName>Last_Processed__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Processed</label>
    <type>DateTime</type>
</CustomField>