force-app/main/default/objects/Bulk_Order_CSV_Data__c/fields/List_deductions__c.field-meta.xml
<CustomField>
    <fullName>List_deductions__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>List deductions</label>
    <type>TextArea</type>
</CustomField>