force-app/main/default/objects/Bulk_Order_CSV_Data__c/fields/No_of_Active_Employees__c.field-meta.xml
<CustomField>
    <fullName>No_of_Active_Employees__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label># of Active Employees</label>
    <length>100</length>
    <type>Text</type>
</CustomField>