force-app/main/default/objects/Bulk_Order_CSV_Data__c/fields/No_of_Inactive_Employees_Paid_in_20XX__c.field-meta.xml
<CustomField>
    <fullName>No_of_Inactive_Employees_Paid_in_20XX__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label># of Inactive Employees Paid in 2019</label>
    <length>100</length>
    <type>Text</type>
</CustomField>