force-app/main/default/objects/Bulk_Order_CSV_Data__c/fields/Pay_Schedule_2__c.field-meta.xml
<CustomField>
    <fullName>Pay_Schedule_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pay Schedule 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>