force-app/main/default/objects/Bulk_Order_CSV_Data__c/fields/Previous_Payroll_Provider__c.field-meta.xml
<CustomField>
    <fullName>Previous_Payroll_Provider__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Previous Payroll Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>