force-app/main/default/objects/Bulk_Order_CSV_Data__c/fields/State_Operated_In__c.field-meta.xml
<CustomField>
    <fullName>State_Operated_In__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>State Operated In</label>
    <length>255</length>
    <type>Text</type>
</CustomField>